<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_rad_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Read Us"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="2dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="2dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_donor_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Donor List"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="BLOOD HUB"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>


        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#EEEEEE"
            android:hint="USERNAME"
            android:padding="12dp"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#EEEEEE"
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:text="Login"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>